Instead of a date subtype we add the dates with the article fixed as a new suggestion